# Executables

./: .gitignore  CendronyxRootCert.cer  CendronyxRootCert.pem  README.md  Trust-Cendronyx-Certificate.bat  app.json  package-lock.json  package.json
.github/workflows/: build-all.yml
android/: settings.gradle
android-expo/: App.js  app.json  create_assets.js  index.js  metro.config.js  package-lock.json  package.json
android-expo/android/: gradle.properties  settings.gradle
android-expo/android/app/: build.gradle
android-expo/android/app/src/main/: AndroidManifest.xml
android-expo/android/app/src/main/java/com/p2pclipboard/sync/: MainActivity.kt  MainApplication.kt
android-expo/android/app/src/main/res/values/: colors.xml  strings.xml
android-expo/src/components/: DonationModal.jsx  OnboardingModal.js
android-expo/src/services/: CryptoService.js  LocalTcpServer.js  ShareIntentListener.js  StorageTracker.js
android/app/: build.gradle
android/app/src/main/java/com/rodent/p2p_clipboard_sync/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
shared/: payload_schema.json
windows-tauri/: Cargo.toml  create_icons.js  installer.nsh  make_valid_ico.js  package.json  popup.html  tauri.conf.json
windows-tauri/icons/: icon.icns
windows-tauri/src/: clipboard.rs  crypto.rs  main.rs  server.rs  storage.rs  window_manager.rs
