[package]
name = "cendrosync"
version = "1.0.0"
edition = "2021"
description = "System-tray P2P encrypted clipboard synchronization utility"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
arboard = "3.4"
uuid = { version = "1.8", features = ["v4"] }
dirs = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
